[package]
name = "control_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
zenoh = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1.39", features = ["full", "test-util"] }
tempfile = "3.2"
