[package]
name = "fabric"
version = "0.2.1"
edition = "2021"
authors = ["Varun Kamath <varun.kamath@example.com>"]
description = "A library for building networks of autonomous agents"
license = "MIT"

[dependencies]
async-trait = "0.1"
backoff = "0.4"
flume = "0.11"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
zenoh = "0.11"
rand = "0.8"
lazy_static = "1.5.0"

[dev-dependencies]
tokio = { version = "1.39", features = ["full", "test-util", "rt-multi-thread"] }

[profile.release]
debug = 0

[lib]
name = "fabric"
path = "src/lib.rs"
