[package]
name = "sensor_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
rand = "0.8"
zenoh = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.39", features = ["full", "test-util"] }
