[package]
name = "example_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example_node"
path = "src/main.rs"

[dependencies]
fabric = { path = "../../fabric" }
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
serde_json = "1.0"
zenoh = "0.11"
async-trait = "0.1"
chrono = "0.4"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.39", features = ["full", "test-util", "rt-multi-thread"] }

[profile.release]
debug = 0
