[package]
name = "example_orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example_orchestrator"
path = "src/main.rs"

[dependencies]
fabric = { path = "../../fabric" }
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
zenoh = "0.11"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dashmap = "6.0"

[dev-dependencies]
tokio = { version = "1.39", features = ["full", "test-util", "rt-multi-thread"] }

[profile.release]
debug = 0
